reflect-demo/tests/errors/invalid_reflect_enum.stderr
error: failure to derive reflect::Input/reflect::Output while serde compilation fails
 --> tests/errors/invalid_reflect_enum.rs:2:7
  |
2 | union MyUnion {
  |       ^^^^^^^
